<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/library_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/library_history_btn"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mochiypoppone"
        android:paddingStart="8dp"
        android:text="@string/history"
        android:textAlignment="viewStart"
        android:textColor="@color/font_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/library_history_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/library_history_btn" />

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/light_dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/library_history_recycler_view" />

    <Button
        android:id="@+id/library_watchLater_btn"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:fontFamily="@font/mochiypoppone"
        android:paddingStart="8dp"
        android:text="@string/watch_later"
        android:textAlignment="viewStart"
        android:textColor="@color/font_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <Button
        android:id="@+id/library_support_btn"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:fontFamily="@font/mochiypoppone"
        android:paddingStart="8dp"
        android:text="@string/support"
        android:textAlignment="viewStart"
        android:textColor="@color/font_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/library_watchLater_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>